{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 174,
  "lineage": "7544b14b-8a14-3bee-6827-757593cf3d24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CDB_3375_devops-tools-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bee12a638c7a8942",
            "arn": "arn:aws:ec2:ca-central-1:171349692937:instance/i-0f6cfb2470e9a514a",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6cfb2470e9a514a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CDB-3375-final-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c5657d012d7c377",
            "private_dns": "ip-10-0-1-162.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-99-79-54-86.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.54.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e66b204ac651a12",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc47dcd4d5ada54e",
            "tags": {
              "Name": "CDB-3375-final-project-devops-tools-instance"
            },
            "tags_all": {
              "Name": "CDB-3375-final-project-devops-tools-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ef0b97d7db791e4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG-CDB-3375-final-project",
            "aws_subnet.CDB_3375_subnet_1",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CDB_3375_jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bee12a638c7a8942",
            "arn": "arn:aws:ec2:ca-central-1:171349692937:instance/i-00cd5a9aef3ea4983",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cd5a9aef3ea4983",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CDB-3375-final-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfe74eeae02487ee",
            "private_dns": "ip-10-0-1-117.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-35-183-243-129.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.243.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7e83c45b867741c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc47dcd4d5ada54e",
            "tags": {
              "Name": "CDB-3375-final-project-jenkins-instance"
            },
            "tags_all": {
              "Name": "CDB-3375-final-project-jenkins-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ef0b97d7db791e4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG-CDB-3375-final-project",
            "aws_subnet.CDB_3375_subnet_1",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CDB_3375_webapp-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bee12a638c7a8942",
            "arn": "arn:aws:ec2:ca-central-1:171349692937:instance/i-07978d4b6d1fbed5e",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07978d4b6d1fbed5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "CDB-3375-final-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8bcf2f338385db2",
            "private_dns": "ip-10-0-1-60.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-35-182-245-204.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.245.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ce124c3b185f379",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc47dcd4d5ada54e",
            "tags": {
              "Name": "CDB-3375-final-project-webapp-instance"
            },
            "tags_all": {
              "Name": "CDB-3375-final-project-webapp-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ef0b97d7db791e4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG-CDB-3375-final-project",
            "aws_subnet.CDB_3375_subnet_1",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CDB_3375_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:internet-gateway/igw-0f06b2f2d723b667f",
            "id": "igw-0f06b2f2d723b667f",
            "owner_id": "171349692937",
            "tags": {
              "Name": "CDB-3375-igw"
            },
            "tags_all": {
              "Name": "CDB-3375-igw"
            },
            "vpc_id": "vpc-0027073d4062ee9f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CDB_3375_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:route-table/rtb-0b4a02084142fb270",
            "id": "rtb-0b4a02084142fb270",
            "owner_id": "171349692937",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f06b2f2d723b667f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CDB-3375-public-rt"
            },
            "tags_all": {
              "Name": "CDB-3375-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0027073d4062ee9f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.CDB_3375_igw",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019da5f8697098ed7",
            "route_table_id": "rtb-0b4a02084142fb270",
            "subnet_id": "subnet-0dc47dcd4d5ada54e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.CDB_3375_igw",
            "aws_route_table.CDB_3375_public_rt",
            "aws_subnet.CDB_3375_subnet_1",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019da5f8697098ed7",
            "route_table_id": "rtb-0b4a02084142fb270",
            "subnet_id": "subnet-0dc47dcd4d5ada54e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.CDB_3375_igw",
            "aws_route_table.CDB_3375_public_rt",
            "aws_subnet.CDB_3375_subnet_1",
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-CDB-3375-final-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:security-group/sg-00ef0b97d7db791e4",
            "description": "Allow HTTP, HTTPS, and SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ef0b97d7db791e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-CDB-3375-final-project",
            "name_prefix": "",
            "owner_id": "171349692937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-CDB-3375-final-project"
            },
            "tags_all": {
              "Name": "SG-CDB-3375-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0027073d4062ee9f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CDB_3375_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:subnet/subnet-0dc47dcd4d5ada54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc47dcd4d5ada54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171349692937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CDB-3375-subnet-1"
            },
            "tags_all": {
              "Name": "CDB-3375-subnet-1"
            },
            "vpc_id": "vpc-0027073d4062ee9f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CDB_3375_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:subnet/subnet-03a459faae419d8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a459faae419d8c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "171349692937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CDB-3375-subnet-2"
            },
            "tags_all": {
              "Name": "CDB-3375-subnet-2"
            },
            "vpc_id": "vpc-0027073d4062ee9f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.CDB_3375_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CDB_3375_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:171349692937:vpc/vpc-0027073d4062ee9f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f44c80c23243439",
            "default_route_table_id": "rtb-0b38d9b19117d7a33",
            "default_security_group_id": "sg-01d7d7986fbe88315",
            "dhcp_options_id": "dopt-20052c48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0027073d4062ee9f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b38d9b19117d7a33",
            "owner_id": "171349692937",
            "tags": {
              "Name": "CDB-3375-Final-Project-vpc"
            },
            "tags_all": {
              "Name": "CDB-3375-Final-Project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}